--- a/docassemble/C2/data/questions/X1.01.questions.yml
+++ b/docassemble/C2/data/questions/X1.01.questions.yml
@@ -28,6 +28,12 @@ fields:
   - no label: MJFwork_requested
     datatype: area
 ---
+# Stores the description of the work that was requested
+question: Describe the work that was asked of you
+fields:
+  - no label: MJFwork_requestedLeft
+    datatype: area
+---
 # We ask the two payment questions in a single question block
 question: Payment
 fields:
@@ -36,6 +42,13 @@ fields:
     min: 0
 under: |
   If you have not yet paid anything, just leave the default value of $0.00
+---
+# We ask the two payment questions in a single question block
+question: PaymentLeft
+fields:
+  - How much did you agree to be paid for this work?: MJFpayment_agreedLeft
+    datatype: currency
+    min: 0
 ---
 # Test for Offer and Acceptance
 # This code is going to ask two questions to make sure that
@@ -47,6 +60,17 @@ fields:
       - Yes. The other person agreed to do exactly this work: MJFagree_exact
       - Yes. The other person agreed to do some of this work but there was other work that was not agreed to that wasn't done: MJFagree_inexact
       - No. The other person did not agree to do this work or all of this work: MJFdisagree
+---
+# Test for Offer and Acceptance
+# This code is going to ask two questions to make sure that
+question: Did the other party agree for you to do this work?
+fields:
+  - no label: MJFcertaintyLeft
+    datatype: radio
+    choices:
+      - Yes. The other party agreed that I do exactly this work: MJFagree_exact
+      - Yes. The other person agreed that I do some of this work but there was other work that I did that was not agreed to: MJFagree_inexact
+      - No. The other person did not agree that I do this work or all of this work: MJFdisagree
 ---
 # Test for Consideration (and Certainty)
 # Because this is a Yes/No answer we store the results as boolean (ie: True/False)
@@ -61,6 +85,19 @@ fields:
       - Yes, we agreed to pay ${ currency(MJFpayment_agreed) } for the work: True
       - No, we never reached a firm agreement on how much I should pay: False
 ---
+# Test for Consideration (and Certainty)
+# Because this is a Yes/No answer we store the results as boolean (ie: True/False)
+# values.  For more information on booleans check out C2.01 video.
+question: Payment for the Work
+subquestion: |
+  Did you and the other person agree on how much you would be paid for the work?
+fields:
+  - no label: MJFconsiderationLeft
+    datatype: radio
+    choices:
+      - Yes, we agreed that I be paid ${ currency(MJFpayment_agreed) } for the work: True
+      - No, we never reached a firm agreement on how much I should be paid: False
+---
 # Just to mix things up, we use a 'yesno' field to ask whether the other person
 # had capacity.  We are reducing 'capacity' in this app to just being an adult.
 # For the purposes of this app it's too complex to get into actual mental capacity.
@@ -68,6 +105,14 @@ question: Who did you contract with?
 subquestion: |
   Was the other person an adult?
 yesno: MJFcapacity
+---
+# Just to mix things up, we use a 'yesno' field to ask whether the other person
+# had capacity.  We are reducing 'capacity' in this app to just being an adult.
+# For the purposes of this app it's too complex to get into actual mental capacity.
+question: Who did you contract with?
+subquestion: |
+  Was the other person an adult?
+yesno: MJFcapacityLeft
 ---
 # Question to ask if there is a written contract
 question: Written Contract
